# dsba-lect08

./: README.md
src/: CMakeLists.txt
src/common/: readme.md  vect_utils.cpp  vect_utils.h
src/ex1_misc/: main.cpp
src/ex3_remove_from_vec/: main.cpp
